# ec2-setup-sos-workflow

./: .gitignore  README.md  config.TEMPLATE.yml  config.template.yml  hosts.TEMPLATE.yml  init.sos  install_miniconda_sos.sh  pyproject.toml  remote.sos  requirements.txt  teardown.sos
ec2-setup/: pyproject.toml  requirements.txt
ec2-setup/ec2_setup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ec2-setup/pip-wheel-metadata/ec2_setup-0.1.0.dist-info/: METADATA
ec2_setup/: __init__.py  instances.py  volumes.py
