[tool.poetry]
name = "sos-aws-ec2-setup"
version = "0.1.0"
description = "A simple pipeline built with SoS Workflow to manage AWS EC2 instances and EBS volumes"
authors = ["Lucas Amaro <lucasrla@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/lucasrla/sos-aws-ec2-setup"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.3.1"
boto3 = "^1.14.50"
sos = "^0.21.14"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
