[tool.poetry]
name = "ec2-setup-sos-workflow"
version = "0.1.0"
description = "A simple pipeline built with SoS Workflow to manage AWS EC2 instances and EBS volumes"
authors = ["Lucas Amaro <lucasrla@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/lucasrla/ec2-setup-sos-workflow"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3.1"
sos = "^0.21.14"
ec2-setup = {path = "ec2-setup"} # install our local package from a directory

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
