[tool.poetry]
name = "ec2-setup"
version = "0.1.0"
description = "A thin wrapper around boto3 to manage AWS EC2 instances and EBS volumes"
authors = ["Lucas Amaro <lucasrla@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.14.50"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
